Moving development between systems so pushing everything.
Signed-off-by: Korhonen, Jouni <jouni.korhonen@nordicsemi.no>

--- a/pasmo/CMakeLists.txt
+++ b/pasmo/CMakeLists.txt
@@ -3,8 +3,8 @@ project (pasmo CXX)
 set(TARGET pasmo)
 
 set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_BUILD_TYPE DEBUG)
-#set(CMAKE_BUILD_TYPE RELEASE)     # RELEASE
+#set(CMAKE_BUILD_TYPE DEBUG)
+set(CMAKE_BUILD_TYPE RELEASE)
 #set(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG} )
 #set(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE} -O3 )
 
