Fix on IX-nn and IY-nn displacement parsing. The fix patches the negative displacement runtime into positive by adding +0 into the beginning of the displacement as the positive displacement parsing is working.
Signed-off-by: Korhonen, Jouni <jouni.korhonen@nordicsemi.no>

--- a/pasmo/CMakeLists.txt
+++ b/pasmo/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_BUILD_TYPE RELEASE)
 #set(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG} )
 #set(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE} -O3 )
 
+set(NDEBUG 1)
+
 set(SOURCE_FILES
     asm.cpp
     asm.h
