--- a/pasmo/CMakeLists.txt
+++ b/pasmo/CMakeLists.txt
@@ -3,12 +3,13 @@ project (pasmo CXX)
 set(TARGET pasmo)
 
 set(CMAKE_CXX_STANDARD 11)
-#set(CMAKE_BUILD_TYPE DEBUG)
-set(CMAKE_BUILD_TYPE RELEASE)
-#set(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG} )
+set(CMAKE_BUILD_TYPE DEBUG)
+#set(CMAKE_BUILD_TYPE RELEASE)
+set(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG} )
 #set(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE} -O3 )
 
-set(NDEBUG TRUE)
+# Turn off additional debug..
+add_definitions(-DNDEBUG)
 
 set(SOURCE_FILES
     asm.cpp
