First beta of Pasmo v0.5.5.paged version based on the v0.5.5.
Signed-off-by: Jouni Korhonen <jounikor@gmail.com>

--- a/pasmo/CMakeLists.txt
+++ b/pasmo/CMakeLists.txt
@@ -2,36 +2,50 @@ cmake_minimum_required (VERSION 3.0 FATAL_ERROR)
 project (pasmo CXX)
 set(TARGET pasmo)
 
-set(CMAKE_CXX_STANDARD 11)
+
+set(PASMO_VERSION 0.5.5.paged)
+
+set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_BUILD_TYPE DEBUG)
 #set(CMAKE_BUILD_TYPE RELEASE)
-set(CMAKE_CXX_FLAGS_DEBUG ${CMAKE_CXX_FLAGS_DEBUG} )
-#set(CMAKE_CXX_FLAGS_RELEASE ${CMAKE_CXX_FLAGS_RELEASE} -O3 )
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DVERSION=${PASMO_VERSION} " )
+#set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DPASMO_VERSION")
 
 # Turn off additional debug..
 add_definitions(-DNDEBUG)
 
+# Defining this allows legacy Pasmo 0.5.5. IX and IY indices greater than 127; and
+# brings back index calculation bugs for negative indices.
+#add_definitions(-DOLD_PASMO_IXIY_INDICES)
+
 set(SOURCE_FILES
-    asm.cpp
+    asm.cxx
+    cpc.cxx	
+    pasmo.cxx
+    tap.cxx
+    asmerror.cxx
+    macro.cxx
+    pasmotypes.cxx
+    token.cxx
+    asmfile.cxx
+    nullstream.cxx
+    spectrum.cxx
+    tzx.cxx
+
     asm.h
-    asmfile.cpp
     asmfile.h
-    cpc.cpp
-    cpc.h
-    pasmo.cpp
-    pasmotypes.cpp
+    macro.h
     pasmotypes.h
-    spectrum.cpp
-    spectrum.h
-    tap.cpp
     tap.h
-    token.cpp
     token.h
-    trace.cpp
-    trace.h
-    tzx.cpp
+    asmerror.h
+    cpc.h
+    nullstream.h
+    spectrum.h
+    test_protocol.h
     tzx.h
-    memmap.cpp
+
+    memmap.cxx
     memmap.h
 )
 
